--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div>%sveltekit.body%</div>
